--- a/jobverse/templates/about.html
+++ b/jobverse/templates/about.html
@@ -1,4 +1,4 @@
-{% extends "layout.html" %}
+{% extends "index.html" %}
 {% block content %}
     <h2>ABOUT </h2>
     <p>Welcome to JobVerse! This site gives information about the job experience of the seniors who got placed lately in our college. Through our website they can share their company experience. It will be useful for students who are aspiring for that particular company.Students can refer to the experience in our website instead of going and asking a known senior in person each time about the company and their experience.JobVerse will simplify this task.</p>
